plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.8'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.lc'
version = '0.0.1-SNAPSHOT'
java.sourceCompatibility = JavaVersion.VERSION_1_8

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.alibaba:fastjson:1.2.76'
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'cn.hutool:hutool-core:5.8.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.gavaghan:geodesy:1.1.3'
}

tasks.named('test') {
    useJUnitPlatform()
}
